tests/syntax/error_bad_return_else.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_bad_return_else.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_bad_return_else.silly:13:5: error: RETURN is not currently allowed in a ELSE block
// CHECK:    13 |     RETURN 0;
// CHECK:       |     ^

IF (1 EQ 0)
{
    PRINT "hi";
}
ELSE
{
    RETURN 0;
};
